added basic query builder, added patch user route
