# docs/swagger.json
@@ -27,7 +27,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.LoginRequest"
+                            "$ref": "#/definitions/handlers.PostAuthRequest"
                         }
                     }
                 ],
@@ -35,7 +35,7 @@
                     "200": {
                         "description": "Token Response",
                         "schema": {
-                            "$ref": "#/definitions/handlers.TokenResponse"
+                            "$ref": "#/definitions/handlers.PostAuthResponse"
                         }
                     },
                     "400": {
@@ -65,7 +65,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Create User",
+                "summary": "Create a new user",
                 "parameters": [
                     {
                         "description": "Create User Request",
@@ -73,7 +73,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.CreateUserRequest"
+                            "$ref": "#/definitions/handlers.PostUserRequest"
                         }
                     }
                 ],
@@ -100,7 +100,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get a user by apiKey",
+                "description": "Get user by apiKey",
                 "consumes": [
                     "application/json"
                 ],
@@ -110,7 +110,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Get User by apiKey",
+                "summary": "Get user by apiKey",
                 "parameters": [
                     {
                         "type": "string",
@@ -118,6 +118,49 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User",
+                        "schema": {
+                            "$ref": "#/definitions/data.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ApiError"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Patch user by apiKey",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Patch user by apiKey",
+                "parameters": [
+                    {
+                        "description": "Patch User Request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.PatchUserRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -169,7 +212,18 @@
                 }
             }
         },
-        "handlers.CreateUserRequest": {
+        "handlers.PatchUserRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.PostAuthRequest": {
             "type": "object",
             "properties": {
                 "email": {
@@ -180,21 +234,21 @@
                 }
             }
         },
-        "handlers.LoginRequest": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.TokenResponse": {
+        "handlers.PostAuthResponse": {
             "type": "object",
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.PostUserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
@@ -202,7 +256,7 @@
     },
     "securityDefinitions": {
         "Bearer Authentication": {
-            "description": "Please provide a valid JWT token with Bearer prefix",
+            "description": "A valid JWT token with Bearer prefix",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
